Release Note

* 9/24/2014
  * improved AtlasAnalysisPP for multiple threads processing the same task
  * increased timeout of Interaction to 600

* 9/23/2014
  * changed for prod tasks to avalanche when 5 scout jobs succeeded 
  * introduced scoutSuccessRate
  * fixed AtlasProdJobBroker for noInput
  * capped maxDiskCount until maxwdir is used everywhere
  * added capability to reset resource requirements
  * added split rule for merge step

* 9/22/2014
  * removed the hint from getOutputFiles_JEDI
  * added protection for non exiting cliParams to AtlasAnalPP

* 9/16/2014
  * added umNameAtEnd

* 9/12/2014
  * cleanup for reqID
  * added a hint to getOutputFiles_JEDI
  * reduced fetch size in getOutputFiles_JEDI

* 9/11/2014
  * added protection to getScoutData against widely distributed input sizes
  * fixed AtlasAnalJobBroker to take effective input size into account for walltime

* 9/10/2014
  * fixed undefined variables in JediDBProxy
  * added addNthFieldToLFN

* 9/8/2014
  * fixed file lookup for container
  * introduced trn_unknown
  * added protection against changed comm_parameter

* 9/7/2014
  * removing duplicated panda.um

* 9/3/2014
  * changed AtlasDDM to use listDatasets2
  * changed TR to set proper status/error when registration is failed

* 9/2/2014
  * changed AtlasDDM to work with dq2 and rucio
  * updating startTime at submitssion or retry
  * changed pending killer to take startTime into account

* 8/29/2014
  * fixed getAnalSitesWithData
  * added fixedSandbox
  * setting 0 for SKIPEVENTS when unspecified
  * resetting cloud and site

* 8/27/2014
  * fixed retryTask for running inputs
  * not to overwite useScout when incexec
  * disabled file lookup for merge jobs
  * keeping trn_log

* 8/26/2014
  * fixed JG to bunch of datasets for each task in a single cycle
  * introduced max num of datasets in getTasksTobeProcessed 
  * replacing LS in splitRule
  * fixed retryTask

* 8/25/2014
  * fixed JG for merging with only logs

* 8/24/2014