@@ -1,5 +1,8 @@
 Release Note
 
+* 9/25/2014
+  * setting minRamCount and maxCpuCount to pmerge jobs
+
 * 9/24/2014
   * improved AtlasAnalysisPP for multiple threads processing the same task
   * increased timeout of Interaction to 600
